force-app/main/default/objects/OCX_Source_Ingredient__c/OCX_Source_Ingredient__c.object-meta.xml
<CustomObject>
    <description>Normalized source field with provenance, CX semantics, feature-class priors, and profiling evidence.</description>
    <label>Source Ingredient</label>
    <nameField>
        <label>Ingredient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Source Ingredients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>