force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Access_Source__c.field-meta.xml
<CustomField>
    <fullName>Access_Source__c</fullName>
    <label>Access Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>