force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Account_Path__c.field-meta.xml
<CustomField>
    <fullName>Account_Path__c</fullName>
    <label>Account Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>