force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Aggregatable__c.field-meta.xml
<CustomField>
    <fullName>Aggregatable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aggregatable</label>
    <type>Checkbox</type>
</CustomField>