force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Bucketing_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Bucketing_Strategy__c</fullName>
    <label>Bucketing Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>