force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Business_Concept__c.field-meta.xml
<CustomField>
    <fullName>Business_Concept__c</fullName>
    <label>Business Concept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>