force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Canonical_Field_Key__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Field_Key__c</fullName>
    <label>Canonical Field Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>