force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Classification_Basis__c.field-meta.xml
<CustomField>
    <fullName>Classification_Basis__c</fullName>
    <label>Classification Basis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>