force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Cohort_Dimension_Type__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Dimension_Type__c</fullName>
    <label>Cohort Dimension Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>