force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Cohort_Suitability_Score__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Suitability_Score__c</fullName>
    <label>Cohort Suitability Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>