force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Controllability_Score__c.field-meta.xml
<CustomField>
    <fullName>Controllability_Score__c</fullName>
    <label>Controllability Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>