force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Coverage_Pct__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Pct__c</fullName>
    <label>Coverage Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>