force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Direction_Hypothesis__c.field-meta.xml
<CustomField>
    <fullName>Direction_Hypothesis__c</fullName>
    <label>Direction Hypothesis</label>
    <length>80</length>
    <type>Text</type>
</CustomField>