force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Distinct_Count__c.field-meta.xml
<CustomField>
    <fullName>Distinct_Count__c</fullName>
    <label>Distinct Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>