force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Earliest_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Date__c</fullName>
    <label>Earliest Business Date</label>
    <type>Date</type>
</CustomField>