force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Status__c</fullName>
    <label>Eligibility Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>