force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Exclusion_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Reason__c</fullName>
    <label>Exclusion Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>