force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>