force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Ingredient_Key__c.field-meta.xml
<CustomField>
    <fullName>Ingredient_Key__c</fullName>
    <externalId>true</externalId>
    <label>Ingredient Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>