force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Last_Profiled_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Profiled_At__c</fullName>
    <label>Last Profiled At</label>
    <type>DateTime</type>
</CustomField>