force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Latest_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Date__c</fullName>
    <label>Latest Business Date</label>
    <type>Date</type>
</CustomField>