force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Measurement_Concepts__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Concepts__c</fullName>
    <label>Measurement Concepts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>