force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Metric_Archetypes__c.field-meta.xml
<CustomField>
    <fullName>Metric_Archetypes__c</fullName>
    <label>Metric Archetypes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>