force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Observation_Type__c.field-meta.xml
<CustomField>
    <fullName>Observation_Type__c</fullName>
    <label>Observation Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>