force-app/main/default/objects/OCX_Source_Ingredient__c/fields/OCX_Run__c.field-meta.xml
<CustomField>
    <fullName>OCX_Run__c</fullName>
    <label>Source Intelligence Run</label>
    <referenceTo>OCX_Source_Intelligence_Run__c</referenceTo>
    <relationshipLabel>Source Ingredients</relationshipLabel>
    <relationshipName>Source_Ingredients</relationshipName>
    <type>MasterDetail</type>
</CustomField>