force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Origin_System__c.field-meta.xml
<CustomField>
    <fullName>Origin_System__c</fullName>
    <label>Origin System</label>
    <length>80</length>
    <type>Text</type>
</CustomField>