force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Populated_Count__c.field-meta.xml
<CustomField>
    <fullName>Populated_Count__c</fullName>
    <label>Populated Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>