force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Predictive_Prior_Score__c.field-meta.xml
<CustomField>
    <fullName>Predictive_Prior_Score__c</fullName>
    <label>Predictive Prior Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>