force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Primary_Source_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Source_Role__c</fullName>
    <label>Primary Source Role</label>
    <length>120</length>
    <type>Text</type>
</CustomField>