force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Profile_Summary__c.field-meta.xml
<CustomField>
    <fullName>Profile_Summary__c</fullName>
    <label>Profile Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>