force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Provenance_Role__c.field-meta.xml
<CustomField>
    <fullName>Provenance_Role__c</fullName>
    <label>Provenance Role</label>
    <length>160</length>
    <type>Text</type>
</CustomField>