force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Reference_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Reference_Evidence__c</fullName>
    <label>Reference Dictionary Evidence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>