force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Sample_Values__c.field-meta.xml
<CustomField>
    <fullName>Sample_Values__c</fullName>
    <label>Sample Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>