force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>