force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Source_Roles__c.field-meta.xml
<CustomField>
    <fullName>Source_Roles__c</fullName>
    <label>Source Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>