force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Stability_Prior_Score__c.field-meta.xml
<CustomField>
    <fullName>Stability_Prior_Score__c</fullName>
    <label>Stability Prior Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>