force-app/main/default/objects/OCX_Source_Ingredient__c/fields/Windowable__c.field-meta.xml
<CustomField>
    <fullName>Windowable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Windowable</label>
    <type>Checkbox</type>
</CustomField>